--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ html {
 }
 
 body {
-  background: #181f2a;
   color: white;
   font-family: 'Open Sans', sans-serif;
   font-size: 1.4rem;
@@ -18,6 +17,10 @@ body {
   line-height: 1.5;
   max-width: 1440px;
   margin: auto;
+}
+
+#main-wrapper {
+  background: #181f2a;
 }
 
 h1, h2 {
